--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Indecision-App",
+  "name": "expnsify",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-modal": "^3.8.1",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
