--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "uuid": "^3.3.2",
     "webpack": "^4.28.3",
     "webpack-dev-server": "^3.1.14"
   },
