--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
     "presets": [
-        "env", 
-        "react"
+        "@babel/env",
+        "@babel/react"
     ],
     "plugins": [
-        "transform-class-properties"
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
     ]
 }
