--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "build": "webpack",
     "dev-server": "webpack-dev-server"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "babel-loader": "^8.0.6",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
+    "react-dates": "^20.3.0",
     "react-dom": "16.9.0",
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.0",
