--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run build:prod"
+    "heroku-postbuild": "npm install && npm run build:prod"
   },
   "dependencies": {
     "express": "^4.17.1"
