--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "heroku-postbuild": "npm install && npm run build:prod"
   },
   "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
@@ -48,5 +46,8 @@
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
+  },
+  "devDependencies": {
+    
   }
 }
