--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -21,11 +20,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.4.0",
-    "jest": "^24.9.0",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -38,16 +32,19 @@
     "react-modal": "^3.10.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
     "sass-loader": "^7.3.1",
     "style-loader": "1.0.0",
     "uuid": "^3.3.3",
     "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
-    
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.9.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
