--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "heroku-postbuild": "npm install && npm run build:prod"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
@@ -20,11 +19,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "raf": "^3.4.1",
     "react": "^16.9.0",
     "react-dates": "^20.3.0",
