--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "npm install && npm run build:prod"
   },
@@ -35,6 +35,8 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.3.1",
     "style-loader": "1.0.0",
     "uuid": "^3.3.3",
@@ -42,6 +44,8 @@
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.1.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
